// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalReportArgumentMobile /> should renders correcty when not show 1`] = `
<div
  aria-label="global.menu"
  aria-modal="true"
  data-dialog="true"
  hidden=""
  id="id-1"
  role="dialog"
  style="display:none"
  tabindex="-1"
/>
`;

exports[`<ModalReportArgumentMobile /> should renders correcty with argument 1`] = `
<div
  aria-label="global.menu"
  aria-modal="true"
  data-dialog="true"
  id="id-1"
  role="dialog"
  tabindex="-1"
>
  <div
    class="sc-bdnxRM ctgkbT Modal__ModalContainerInner-gRLtaR"
    style="opacity:0"
  >
    <div
      class="sc-bdnxRM hwveCA Modal__ModalInner-fNqOda"
      style="opacity:0;transform:translateY(-20px) translateZ(0)"
    >
      <main
        class="sc-bdnxRM Flex___StyledAppBox-RSPpX fwqGPs gconsy"
      >
        <button
          aria-controls="id-2"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="sc-bdnxRM Button__ButtonInner-dWPVNG cMnXb dwbTkh"
          type="button"
        >
          global.report.submit
        </button>
        <div
          aria-label="global.report.submit"
          aria-modal="true"
          data-dialog="true"
          hidden=""
          id="id-2"
          role="dialog"
          style="display:none"
          tabindex="-1"
        />
      </main>
    </div>
  </div>
</div>
`;
